# LabWork-2.4

./: .gitignore  CMakeLists.txt  README.md
Main/: main.cpp
TError/: CMakeLists.txt  TError.h
TMatrix/: CMakeLists.txt  TMatrix.cpp  TMatrix.h
TVector/: CMakeLists.txt  TVector.h
test/: CMakeLists.txt  test_Birch.cpp
